# bevy_slinet

./: .actrc  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/: hello_world_tcp.rs  hello_world_tcp_encrypted.rs  hello_world_udp.rs  lobby_and_battle_servers.rs  multiple_connections.rs
src/: client.rs  connection.rs  lib.rs  packet_length_serializer.rs  protocol.rs  serializer.rs  server.rs  tests.rs  tests_mut_serializer.rs
src/protocols/: mod.rs  tcp.rs  udp.rs
src/serializers/: bincode.rs  custom_crypt.rs  mod.rs
